testsuite/tests/checks/multiple_entries/test.out
decls.ads:5:11: error: multiple_entries_in_protected_definitions - rule violation
5 |     entry Put (I: out Integer);
  |           ^^^ 

